--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/users?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.datasource.url=jdbc:h2:mem:testdb,IGNORECASE=TRUE
